some changes in dashboard

--- a/src/app/dashboard/markets/markets.component.html
+++ b/src/app/dashboard/markets/markets.component.html
@@ -121,10 +121,11 @@
             <span style="font-size: 10px; color:#A0A0A0">/ <span>BTC</span></span>
           </td>
           <td class="table__cell">
-            <span>0.00000290</span>
+            <span class="txt-indicate">0.00000290</span>
           </td>
           <td class="table__cell">
-            <span>0.8</span>
+            <span class="txt-green" style="margin-right: 2px;">0.8</span>
+            <span class="arr arr--green"></span>
           </td>
           <td class="table__cell table__cell--tar">
             <span style="font-size: 10px; color:#A0A0A0">9 511.31660052</span>
@@ -141,18 +142,18 @@
             </span>
           </td>
           <td class="table__cell">
-            <span>MFT</span>
+            <span>ETH</span>
             <span style="font-size: 10px; color:#A0A0A0">/ <span>BTC</span></span>
           </td>
           <td class="table__cell">
-            <span class="txt-green">0.00000290</span>
+            <span class="txt-indicate">0.000041</span>
           </td>
           <td class="table__cell">
-            <span class="txt-green" style="margin-right: 2px;">0.8</span>
+            <span class="txt-green" style="margin-right: 2px;">1.2</span>
             <span class="arr arr--green"></span>
           </td>
           <td class="table__cell table__cell--tar">
-            <span style="font-size: 10px; color:#A0A0A0">9 511.31660052</span>
+            <span style="font-size: 10px; color:#A0A0A0">7 386.22491554</span>
           </td>
         </tr>
         <tr style="height: 4px;"></tr>
@@ -166,17 +167,18 @@
     </span>
           </td>
           <td class="table__cell">
-            <span>MFT</span>
+            <span>EOS</span>
             <span style="font-size: 10px; color:#A0A0A0">/ <span>BTC</span></span>
           </td>
           <td class="table__cell">
-            <span>0.00000290</span>
+            <span class="txt-indicate">0.00000142</span>
           </td>
           <td class="table__cell">
-            <span>0.8</span>
+            <span class="txt-red" style="margin-right: 2px;">0.3</span>
+            <span class="arr arr--red"></span>
           </td>
           <td class="table__cell table__cell--tar">
-            <span style="font-size: 10px; color:#A0A0A0">9 511.31660052</span>
+            <span style="font-size: 10px; color:#A0A0A0">535.16809811</span>
           </td>
         </tr>
         <tr style="height: 4px;"></tr>
@@ -190,11 +192,11 @@
             </span>
           </td>
           <td class="table__cell">
-            <span>MFT</span>
+            <span>ETC</span>
             <span style="font-size: 10px; color:#A0A0A0">/ <span>BTC</span></span>
           </td>
           <td class="table__cell">
-            <span class="txt-red">0.00000290</span>
+            <span class="txt-indicate">0.00000290</span>
           </td>
           <td class="table__cell">
             <span class="txt-red" style="margin-right: 2px;">0.8</span>
@@ -216,17 +218,18 @@
     </span>
           </td>
           <td class="table__cell">
-            <span>MFT</span>
+            <span>IOTA</span>
             <span style="font-size: 10px; color:#A0A0A0">/ <span>BTC</span></span>
           </td>
           <td class="table__cell">
-            <span>0.00000290</span>
+            <span class="txt-indicate">0.00000371</span>
           </td>
           <td class="table__cell">
-            <span>0.8</span>
+            <span class="txt-green" style="margin-right: 2px;">3.2</span>
+            <span class="arr arr--green"></span>
           </td>
           <td class="table__cell table__cell--tar">
-            <span style="font-size: 10px; color:#A0A0A0">9 511.31660052</span>
+            <span style="font-size: 10px; color:#A0A0A0">1 231.33470052</span>
           </td>
         </tr>
         <tr style="height: 4px;"></tr>
@@ -244,10 +247,87 @@
             <span style="font-size: 10px; color:#A0A0A0">/ <span>BTC</span></span>
           </td>
           <td class="table__cell">
-            <span>0.00000290</span>
+            <span class="txt-indicate">0.00000290</span>
           </td>
           <td class="table__cell">
-            <span>0.8</span>
+            <span class="txt-green" style="margin-right: 2px;">0.8</span>
+            <span class="arr arr--green"></span>
+          </td>
+          <td class="table__cell table__cell--tar">
+            <span style="font-size: 10px; color:#A0A0A0">9 511.31660052</span>
+          </td>
+        </tr>
+        <tr style="height: 4px;"></tr>
+        <tr class="table__row widget__table-row widget__table-row--green">
+          <td class="table__cell table__cell--tac">
+            <span class="table__row-star">
+              <svg width="14" height="13" viewBox="0 0 14 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path
+      d="M6.52447 0.463524C6.67415 0.00286841 7.32585 0.00286996 7.47553 0.463525L8.68386 4.18237C8.75079 4.38838 8.94277 4.52786 9.15938 4.52786H13.0696C13.554 4.52786 13.7554 5.14767 13.3635 5.43237L10.2001 7.73075C10.0248 7.85807 9.95149 8.08375 10.0184 8.28976L11.2268 12.0086C11.3764 12.4693 10.8492 12.8523 10.4573 12.5676L7.29389 10.2693C7.11865 10.1419 6.88135 10.1419 6.70611 10.2693L3.54267 12.5676C3.15081 12.8523 2.62357 12.4693 2.77325 12.0086L3.98157 8.28976C4.04851 8.08375 3.97518 7.85807 3.79994 7.73075L0.636495 5.43237C0.244639 5.14767 0.446028 4.52786 0.93039 4.52786H4.84062C5.05723 4.52786 5.24921 4.38838 5.31614 4.18237L6.52447 0.463524Z"/>
+              </svg>
+            </span>
+          </td>
+          <td class="table__cell">
+            <span>ETH</span>
+            <span style="font-size: 10px; color:#A0A0A0">/ <span>BTC</span></span>
+          </td>
+          <td class="table__cell">
+            <span class="txt-indicate">0.000041</span>
+          </td>
+          <td class="table__cell">
+            <span class="txt-green" style="margin-right: 2px;">1.2</span>
+            <span class="arr arr--green"></span>
+          </td>
+          <td class="table__cell table__cell--tar">
+            <span style="font-size: 10px; color:#A0A0A0">7 386.22491554</span>
+          </td>
+        </tr>
+        <tr style="height: 4px;"></tr>
+        <tr class="table__row widget__table-row">
+          <td class="table__cell table__cell--tac">
+    <span class="table__row-star">
+    <svg width="14" height="13" viewBox="0 0 14 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+    <path
+      d="M6.52447 0.463524C6.67415 0.00286841 7.32585 0.00286996 7.47553 0.463525L8.68386 4.18237C8.75079 4.38838 8.94277 4.52786 9.15938 4.52786H13.0696C13.554 4.52786 13.7554 5.14767 13.3635 5.43237L10.2001 7.73075C10.0248 7.85807 9.95149 8.08375 10.0184 8.28976L11.2268 12.0086C11.3764 12.4693 10.8492 12.8523 10.4573 12.5676L7.29389 10.2693C7.11865 10.1419 6.88135 10.1419 6.70611 10.2693L3.54267 12.5676C3.15081 12.8523 2.62357 12.4693 2.77325 12.0086L3.98157 8.28976C4.04851 8.08375 3.97518 7.85807 3.79994 7.73075L0.636495 5.43237C0.244639 5.14767 0.446028 4.52786 0.93039 4.52786H4.84062C5.05723 4.52786 5.24921 4.38838 5.31614 4.18237L6.52447 0.463524Z"/>
+    </svg>
+    </span>
+          </td>
+          <td class="table__cell">
+            <span>EOS</span>
+            <span style="font-size: 10px; color:#A0A0A0">/ <span>BTC</span></span>
+          </td>
+          <td class="table__cell">
+            <span class="txt-indicate">0.00000142</span>
+          </td>
+          <td class="table__cell">
+            <span class="txt-red" style="margin-right: 2px;">0.3</span>
+            <span class="arr arr--red"></span>
+          </td>
+          <td class="table__cell table__cell--tar">
+            <span style="font-size: 10px; color:#A0A0A0">535.16809811</span>
+          </td>
+        </tr>
+        <tr style="height: 4px;"></tr>
+        <tr class="table__row widget__table-row widget__table-row--red">
+          <td class="table__cell table__cell--tac">
+            <span class="table__row-star">
+              <svg width="14" height="13" viewBox="0 0 14 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path
+      d="M6.52447 0.463524C6.67415 0.00286841 7.32585 0.00286996 7.47553 0.463525L8.68386 4.18237C8.75079 4.38838 8.94277 4.52786 9.15938 4.52786H13.0696C13.554 4.52786 13.7554 5.14767 13.3635 5.43237L10.2001 7.73075C10.0248 7.85807 9.95149 8.08375 10.0184 8.28976L11.2268 12.0086C11.3764 12.4693 10.8492 12.8523 10.4573 12.5676L7.29389 10.2693C7.11865 10.1419 6.88135 10.1419 6.70611 10.2693L3.54267 12.5676C3.15081 12.8523 2.62357 12.4693 2.77325 12.0086L3.98157 8.28976C4.04851 8.08375 3.97518 7.85807 3.79994 7.73075L0.636495 5.43237C0.244639 5.14767 0.446028 4.52786 0.93039 4.52786H4.84062C5.05723 4.52786 5.24921 4.38838 5.31614 4.18237L6.52447 0.463524Z"/>
+              </svg>
+            </span>
+          </td>
+          <td class="table__cell">
+            <span>ETC</span>
+            <span style="font-size: 10px; color:#A0A0A0">/ <span>BTC</span></span>
+          </td>
+          <td class="table__cell">
+            <span class="txt-indicate">0.00000290</span>
+          </td>
+          <td class="table__cell">
+            <span class="txt-red" style="margin-right: 2px;">0.8</span>
+            <span class="arr arr--red"></span>
+
           </td>
           <td class="table__cell table__cell--tar">
             <span style="font-size: 10px; color:#A0A0A0">9 511.31660052</span>
@@ -264,54 +344,32 @@
     </span>
           </td>
           <td class="table__cell">
-            <span>MFT</span>
+            <span>IOTA</span>
             <span style="font-size: 10px; color:#A0A0A0">/ <span>BTC</span></span>
           </td>
           <td class="table__cell">
-            <span>0.00000290</span>
+            <span class="txt-indicate">0.00000371</span>
           </td>
           <td class="table__cell">
-            <span>0.8</span>
+            <span class="txt-green" style="margin-right: 2px;">3.2</span>
+            <span class="arr arr--green"></span>
           </td>
           <td class="table__cell table__cell--tar">
-            <span style="font-size: 10px; color:#A0A0A0">9 511.31660052</span>
-          </td>
-        </tr>
-        <tr style="height: 4px;"></tr>
-        <tr class="table__row widget__table-row">
-          <td class="table__cell table__cell--tac">
-    <span class="table__row-star">
-    <svg width="14" height="13" viewBox="0 0 14 13" fill="none" xmlns="http://www.w3.org/2000/svg">
-    <path
-      d="M6.52447 0.463524C6.67415 0.00286841 7.32585 0.00286996 7.47553 0.463525L8.68386 4.18237C8.75079 4.38838 8.94277 4.52786 9.15938 4.52786H13.0696C13.554 4.52786 13.7554 5.14767 13.3635 5.43237L10.2001 7.73075C10.0248 7.85807 9.95149 8.08375 10.0184 8.28976L11.2268 12.0086C11.3764 12.4693 10.8492 12.8523 10.4573 12.5676L7.29389 10.2693C7.11865 10.1419 6.88135 10.1419 6.70611 10.2693L3.54267 12.5676C3.15081 12.8523 2.62357 12.4693 2.77325 12.0086L3.98157 8.28976C4.04851 8.08375 3.97518 7.85807 3.79994 7.73075L0.636495 5.43237C0.244639 5.14767 0.446028 4.52786 0.93039 4.52786H4.84062C5.05723 4.52786 5.24921 4.38838 5.31614 4.18237L6.52447 0.463524Z"/>
-    </svg>
-    </span>
-          </td>
-          <td class="table__cell">
-            <span>MFT</span>
-            <span style="font-size: 10px; color:#A0A0A0">/ <span>BTC</span></span>
-          </td>
-          <td class="table__cell">
-            <span>0.00000290</span>
-          </td>
-          <td class="table__cell">
-            <span>0.8</span>
-          </td>
-          <td class="table__cell table__cell--tar">
-            <span style="font-size: 10px; color:#A0A0A0">9 511.31660052</span>
+            <span style="font-size: 10px; color:#A0A0A0">1 231.33470052</span>
           </td>
         </tr>
         <tr style="height: 4px;"></tr>
         </tbody>
       </table>
+      <div class="widget__scroll">
+        <span class="widget__scroll-inner"></span>
+      </div>
     </div>
-    <div class="widget__search">
+    <div class="widget__search" >
       <input class="widget__search-input"  type="text" required="" placeholder="Search">
       <span class="widget__input-img"><img src="../../assets/img/search.svg"></span>
     </div>
-    <div class="widget__scroll">
-      <span class="widget__scroll-inner"></span>
-    </div>
+
     <!--table end-->
   </div>
 </div>
