--- a/src/assets/scss/_layout.scss
+++ b/src/assets/scss/_layout.scss
@@ -94,10 +94,9 @@ b {
     padding: 0 20px 0;
   }
   &--dashboard{
-    max-width: none;
+    max-width: 1480px;
     @media (min-width:1200px) {
-      //padding: 0 32px 0;
-      padding: 0 16px;
+      padding: 0;
     }
   }
 }
