--- a/src/app/dashboard/trade-history/trade-history.component.html
+++ b/src/app/dashboard/trade-history/trade-history.component.html
@@ -64,10 +64,7 @@
     <table class="table widget__table widget__table--mob">
       <thead>
       <tr>
-        <th class="table__cell-head table__cell-head--p4">s</th>
-        <th class="table__cell-head table__cell-head--p4">Pair / <span>Vol</span></th>
-        <th class="table__cell-head table__cell-head--p4">Last price</th>
-        <th class="table__cell-head table__cell-head--p4">24h chg</th>
+
       </tr>
       </thead>
       <tbody></tbody>
@@ -84,111 +81,120 @@
         </tr>
         </thead>
         <tbody class="table__body table__body--none-shadow">
-        <tr class="table__row widget__table-row">
+        <tr class="table__row widget__table-row widget__table-row-hover--red">
           <td class="table__cell table__cell--tal">
             17:36:04
           </td>
           <td class="table__cell table__cell--tal">
-            <span>0.01</span>
+            <span class="txt-indicate">6561.343830000</span>
           </td>
           <td class="table__cell table__cell--tar">
-            <span>60</span>
+            <span class="txt-red">0.646970000</span>
           </td>
         </tr>
-        <tr class="table__row widget__table-row widget__table-row--green">
+        <tr style="height: 4px;"></tr>
+        <tr class="table__row widget__table-row widget__table-row-hover--green">
           <td class="table__cell table__cell--tal">
-            17:36:04
+            17:36:15
           </td>
           <td class="table__cell table__cell--tal">
-            <span>0.01</span>
+            <span class="txt-indicate">6536.154560000</span>
           </td>
           <td class="table__cell table__cell--tar">
-            <span>60</span>
+            <span class="txt-green">1.305960000</span>
           </td>
         </tr>
-        <tr class="table__row widget__table-row ">
+        <tr style="height: 4px;"></tr>
+        <tr class="table__row widget__table-row widget__table-row-hover--red">
           <td class="table__cell table__cell--tal">
-            17:36:04
+            17:36:45
           </td>
           <td class="table__cell table__cell--tal">
-            <span>0.01</span>
+            <span class="txt-indicate">6561.341830000</span>
           </td>
           <td class="table__cell table__cell--tar">
-            <span>60</span>
+            <span class="txt-red">0.646970000</span>
           </td>
         </tr>
-        <tr class="table__row widget__table-row widget__table-row--red">
+        <tr style="height: 4px;"></tr>
+        <tr class="table__row widget__table-row widget__table-row-hover--green">
           <td class="table__cell table__cell--tal">
-            17:36:04
+            17:37:02
           </td>
           <td class="table__cell table__cell--tal">
-            <span>0.01</span>
+            <span class="txt-indicate">6561.341830000</span>
           </td>
           <td class="table__cell table__cell--tar">
-            <span>60</span>
+            <span class="txt-green">0.646970000</span>
           </td>
         </tr>
-        <tr class="table__row widget__table-row widget__table-row--green">
+        <tr style="height: 4px;"></tr>
+        <tr class="table__row widget__table-row widget__table-row-hover--green">
           <td class="table__cell table__cell--tal">
-            17:36:04
+            17:37:11
           </td>
           <td class="table__cell table__cell--tal">
-            <span>0.01</span>
+            <span class="txt-indicate">6561.341830000</span>
           </td>
           <td class="table__cell table__cell--tar">
-            <span>60</span>
+            <span class="txt-green">0.646970000</span>
           </td>
         </tr>
-        <tr class="table__row widget__table-row ">
+        <tr style="height: 4px;"></tr>
+        <tr class="table__row widget__table-row widget__table-row-hover--red ">
           <td class="table__cell table__cell--tal">
-            17:36:04
+            17:37:32
           </td>
           <td class="table__cell table__cell--tal">
-            <span>0.01</span>
+            <span class="txt-indicate">6561.341830000</span>
           </td>
           <td class="table__cell table__cell--tar">
-            <span>60</span>
+            <span class="txt-red">0.646970000</span>
           </td>
         </tr>
-        <tr class="table__row widget__table-row">
+        <tr style="height: 4px;"></tr>
+        <tr class="table__row widget__table-row widget__table-row-hover--red">
           <td class="table__cell table__cell--tal">
-            17:36:04
+            17:38:00
           </td>
           <td class="table__cell table__cell--tal">
-            <span>0.01</span>
+            <span class="txt-indicate">6561.341830000</span>
           </td>
           <td class="table__cell table__cell--tar">
-            <span>60</span>
+            <span class="txt-red">0.646970000</span>
           </td>
         </tr>
-        <tr class="table__row widget__table-row">
+        <tr style="height: 4px;"></tr>
+        <tr class="table__row widget__table-row widget__table-row-hover--red">
           <td class="table__cell table__cell--tal">
-            17:36:04
+            17:38:14
           </td>
           <td class="table__cell table__cell--tal">
-            <span>0.01</span>
+            <span class="txt-indicate">6561.341830000</span>
           </td>
           <td class="table__cell table__cell--tar">
-            <span>60</span>
+            <span class="txt-red">0.646970000</span>
           </td>
         </tr>
-        <tr class="table__row widget__table-row">
+        <tr style="height: 4px;"></tr>
+        <tr class="table__row widget__table-row widget__table-row-hover--green">
           <td class="table__cell table__cell--tal">
-            17:36:04
+            17:38:54
           </td>
           <td class="table__cell table__cell--tal">
-            <span>0.01</span>
+            <span class="txt-indicate">6561.341830000</span>
           </td>
           <td class="table__cell table__cell--tar">
-            <span>60</span>
+            <span class="txt-green">0.646970000</span>
           </td>
         </tr>
+        <tr style="height: 4px;"></tr>
         </tbody>
       </table>
+      <div class="widget__scroll">
+        <span class="widget__scroll-inner"></span>
+      </div>
     </div>
     <!--table end-->
-    <div class="widget__scroll">
-      <span class="widget__scroll-inner"></span>
-    </div>
   </div>
 </div>
