--- a/src/app/dashboard/trading/buy/buy.component.html
+++ b/src/app/dashboard/trading/buy/buy.component.html
@@ -37,19 +37,19 @@
   </div>
   <div class="row row--jcsb widget__trading-row">
     <div class="wrap-input widget__input widget__input--mr32">
-      <input class="wrap-input__input">
+      <input class="wrap-input__input" type="text" required>
       <label class="wrap-input__label" for="">Quantity of BTC</label>
       <div class="wrap-input__line"></div>
     </div>
     <div class="wrap-input widget__input">
-      <input class="wrap-input__input">
+      <input class="wrap-input__input" type="text" required>
       <label class="wrap-input__label" for="">Price in USDT</label>
       <div class="wrap-input__line"></div>
     </div>
   </div>
   <div class="row row--jcsb widget__trading-row">
     <div class="wrap-input widget__input">
-      <input class="wrap-input__input">
+      <input class="wrap-input__input" type="text" required>
       <label class="wrap-input__label" for="">Total in USDT</label>
       <div class="wrap-input__line"></div>
     </div>
