--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -17,10 +17,10 @@
   display: -webkit-flex;
   display: -ms-flex;
   display: flex;
-  max-width: 1400px;
+  max-width: 1440px;
   height: 100%;
   margin: 0 auto;
-  padding: 0 20px;
+  padding: 0 32px;
   align-items: center;
 }
 
@@ -480,6 +480,7 @@
   display: flex;
   align-self: stretch;
   align-items: center;
+  padding: 0;
 
   &:before {
     display: inline-block;
