--- a/src/assets/scss/components/_header.scss
+++ b/src/assets/scss/components/_header.scss
@@ -15,7 +15,7 @@
   display: -webkit-flex;
   display: -ms-flex;
   display: flex;
-  max-width: 1400px;
+  max-width: 1440px;
   height: 100%;
   margin: 0 auto;
   padding: 0 20px;
@@ -330,6 +330,7 @@
   display: flex;
   align-self: stretch;
   align-items: center;
+  padding: 0;
 
   &:before {
     display: inline-block;
