--- a/src/app/popups/two-factor-popup/google/google-step-one/google-step-one.component.html
+++ b/src/app/popups/two-factor-popup/google/google-step-one/google-step-one.component.html
@@ -7,13 +7,13 @@
      href="https://play.google.com/store/apps/details?id=com.google.android.apps.authenticator2"
      target="_blank"
   >
-    <img src="../../../../assets/img/g-play-black-bg.svg">
+    <img src="../../../../../assets/img/g-play-black-bg.svg">
   </a>
   <a class="modal__store-link"
      href="https://itunes.apple.com/ua/app/google-authenticator/id388497605?mt=8"
      target="_blank"
   >
-    <img src="../../../../assets/img/app-store-black-bg.svg">
+    <img src="../../../../../assets/img/app-store-black-bg.svg">
   </a>
 </div>
 <button class="btn btn--active btn--center " (click)="onNextStep()">To the next step</button>
