enabled google 2 fa featues

--- a/src/app/popups/two-factor-popup/google/google-step-three/google-step-three.component.html
+++ b/src/app/popups/two-factor-popup/google/google-step-three/google-step-three.component.html
@@ -6,6 +6,6 @@
   <p>Reseting your two - factor authentication requires opening a support ticket and may take up to 48 hours to address.</p>
 </div>
 <div class="modal__row">
-  <div class="modal__code-grey-field">ghmxPw14AFcByz</div>
+  <div class="modal__code-grey-field">{{ secretCode }}</div>
 </div>
 <button class="btn btn--active btn--center " (click)="onNextStep()">Yes I saved it</button>
