work on  trading mob widget

--- a/src/app/dashboard/graph/graph.component.html
+++ b/src/app/dashboard/graph/graph.component.html
@@ -59,7 +59,50 @@
       </div>
     </div>
   </div>
+  <div class="widget__header--mob">
+    <div class="currency-pair-info--mob">
+      <div class="currency-pair-info__inner">
+        <div class="currency-pair-info__pair">
+          <div class="dropdown currency-pair-info__dropdown">
+            <div class="dropdown__btn">BTC</div>
+            <ul class="dropdown__list">
+              <li class="dropdown__item">ETH</li>
+              <li class="dropdown__item">LTC</li>
+              <li class="dropdown__item">DASH</li>
+            </ul>
+          </div>
+          <div class="currency-pair-info__change-pair"></div>
+          <div class="dropdown currency-pair-info__dropdown">
+            <div class="dropdown__btn">USD</div>
+            <ul class="dropdown__list">
+              <li class="dropdown__item">ETH</li>
+              <li class="dropdown__item">LTC</li>
+              <li class="dropdown__item">DASH</li>
+            </ul>
+          </div>
+        </div>
+        <div class="currency-pair-info__info currency-pair-info__info--up">
+          <div class="currency-pair-info__change">
+            <span>+0.8%</span>
+            <img class="currency-pair-info__arr-up" src="../assets/img/arr-up-green.svg" alt="">
+            <img class="currency-pair-info__arr-down" src="../assets/img/arr-down-red.svg" alt="">
+            <span>(+49,816 USD)</span>
+          </div>
+          <div class="currency-pair-info__price">6 227 USD</div>
+        </div>
+      </div>
+    </div>
+  </div>
   <div class="widget__content">
-    <img src="../../assets/img/Graph.png" alt="" style="width: 100%; height: 100%;">
+    <div style="background-image: url('../assets/img/Graph.png'); background-repeat: no-repeat;
+     -webkit-background-size: cover;background-size: 100% 100%; background-position: center; height: 100%;"></div>
+  </div>
+  <div class="widget__content widget__content--mob" style="padding-bottom: 40px;">
+    <div style="background-image: url('../assets/img/Graph.png'); background-repeat: no-repeat;
+     -webkit-background-size: cover;background-size: 100% 100%; background-position: center; height: 100%;"></div>
+    <div class="widget__buy-sell-btn-wrap">
+      <a href="#" class="widget__buy-sell-btn widget__buy-sell-btn--green">Buy BTC</a>
+      <a href="#" class="widget__buy-sell-btn widget__buy-sell-btn--red">Sell BTC</a>
+    </div>
   </div>
 </div>
