--- a/src/assets/scss/_layout.scss
+++ b/src/assets/scss/_layout.scss
@@ -94,9 +94,10 @@ b {
     padding: 0 20px 0;
   }
   &--dashboard{
+    flex-grow: 1;
     max-width: 1480px;
+    padding: 0;
     @media (min-width:1200px) {
-      padding: 0;
     }
   }
 }
