--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -5,33 +5,33 @@
       <app-graph></app-graph>
     </div>
 
-    <div class="dashboard__item dashboard__item--width1">
-      <app-markets></app-markets>
-    </div>
+    <!--<div class="dashboard__item dashboard__item&#45;&#45;width1">-->
+      <!--<app-markets></app-markets>-->
+    <!--</div>-->
 
     <div class="dashboard__item dashboard__item--width1">
       <app-trading></app-trading>
     </div>
 
-    <div class="dashboard__item dashboard__item--width1">
-      <app-order-book></app-order-book>
-    </div>
-
-    <div class="dashboard__item dashboard__item--width1">
-      <app-trade-history></app-trade-history>
-    </div>
-
-    <!--<div class="dashboard__item dashboard__item&#45;&#45;width2">-->
-      <!--<app-active-pair></app-active-pair>-->
+    <!--<div class="dashboard__item dashboard__item&#45;&#45;width1">-->
+      <!--<app-order-book></app-order-book>-->
     <!--</div>-->
 
-    <div class="dashboard__item dashboard__item--width2">
-      <app-orders></app-orders>
-    </div>
+    <!--<div class="dashboard__item dashboard__item&#45;&#45;width1">-->
+      <!--<app-trade-history></app-trade-history>-->
+    <!--</div>-->
 
-    <div class="dashboard__item dashboard__item--width1">
-      <app-chat></app-chat>
-    </div>
+    <!--<div class="dashboard__item dashboard__item&#45;&#45;width2">-->
+      <!--<app-orders></app-orders>-->
+    <!--</div>-->
+
+    <!--<div class="dashboard__item dashboard__item&#45;&#45;width1">-->
+      <!--<app-chat></app-chat>-->
+    <!--</div>-->
+
+    <!--<div class="dashboard__item dashboard__item&#45;&#45;width2">-->
+    <!--<app-active-pair></app-active-pair>-->
+    <!--</div>-->
 
   </div>
 
