--- a/src/assets/scss/components/_currency-pair-info.scss
+++ b/src/assets/scss/components/_currency-pair-info.scss
@@ -1,9 +1,12 @@
 .currency-pair-info {
+  display: none;
   width: 100%;
-  height: 52px;
-
   box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.25);
   /*--- modificators start ---*/
+  &--mob{
+    height: 44px;
+    display: block;
+  }
   /*--- modificators end ---*/
   /*--- elements start ---*/
   &__inner {
@@ -90,6 +93,7 @@
 
 @media (min-width: 1200px) {
   .currency-pair-info {
+    display: block;
     height: 80px;
     margin-bottom: 20px;
     &__inner {
