--- a/src/assets/scss/components/_currency-pair-info.scss
+++ b/src/assets/scss/components/_currency-pair-info.scss
@@ -4,6 +4,7 @@
   box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.25);
   /*--- modificators start ---*/
   &--mob{
+    width: 100%;
     height: 44px;
     display: block;
   }
