notifications and change links

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -2,11 +2,11 @@
   <div class="footer__inner">
     <div class="footer__inner-top">
       <ul class="footer__menu">
-        <li class="footer__menu-item"><a class="footer__menu-link" href="#"> Terms and Conditions</a></li>
-        <li class="footer__menu-item"><a class="footer__menu-link" href="#">Privacy Policy</a></li>
-        <li class="footer__menu-item"><a class="footer__menu-link" href="#">Contacts and Support </a></li>
-        <li class="footer__menu-item"><a class="footer__menu-link" href="#">About us</a></li>
-        <li class="footer__menu-item"><a class="footer__menu-link" href="#">Submit a coin for listing</a></li>
+        <li class="footer__menu-item"><a class="footer__menu-link" href="https://exrates.me/termsAndConditions"> Terms and Conditions</a></li>
+        <li class="footer__menu-item"><a class="footer__menu-link" href="https://exrates.me/privacyPolicy">Privacy Policy</a></li>
+        <li class="footer__menu-item"><a class="footer__menu-link" href="https://exrates.me/contacts">Contacts and Support </a></li>
+        <li class="footer__menu-item"><a class="footer__menu-link" href="https://exrates.me/aboutUs">About us</a></li>
+        <li class="footer__menu-item"><a class="footer__menu-link" href="https://exrates.me/partners">Submit a coin for listing</a></li>
         <li class="footer__menu-item"><a class="footer__menu-link" href="#">Referral</a></li>
       </ul>
       <div class="footer__app-wrap">
